Update brand logos

--- a/public/src/partials/closing.html
+++ b/public/src/partials/closing.html
@@ -4,7 +4,8 @@
   <ul class="logo-grid">
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/apothecanna.png" class="current" />
+        <img src="/img/clients/knockouts/popaganda.png" class="current" />
+        <img data-lazy-src="/img/clients/knockouts/apothecanna.png" />
       </div>
     </li>
     <li>
@@ -26,7 +27,8 @@
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/nexus.png" class="current" />
+        <img src="/img/clients/knockouts/kennyscharf.png" class="current" />
+        <img data-lazy-src="/img/clients/knockouts/nexus.png" />
       </div>
     </li>
     <li>
@@ -48,23 +50,26 @@
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/ssur.png" class="current" />
+        <img src="/img/clients/knockouts/herbalchef.png" class="current" />
+        <img data-lazy-src="/img/clients/knockouts/ssur.png" />
       </div>
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/stash.png" class="current" />
+        <img src="/img/clients/knockouts/wonderbrett.png" class="current" />
+        <img data-lazy-src="/img/clients/knockouts/stash.png" />
       </div>
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/wakaflocka.png" class="current" />
+        <img src="/img/clients/knockouts/hemper.png" class="current" />
         <img data-lazy-src="/img/clients/knockouts/tcase.png" />
       </div>
     </li>
     <li>
       <div class="logo-frame">
-        <img src="/img/clients/knockouts/solselects.png" class="current"/>
+        <img src="/img/clients/knockouts/ronenglish.png" class="current"/>
+        <img data-lazy-src="/img/clients/knockouts/solselects.png" />
       </div>
     </li>
   </ul>
